--- a/AutoGlassWeb/Views/Produto/Index.cshtml
+++ b/AutoGlassWeb/Views/Produto/Index.cshtml
@@ -1,5 +1,9 @@
-﻿@{
+﻿@using AutoGlass.Model
+ @model List<Produto>
+
+@{
     ViewData["Title"] = "Listagem de Produtos";
+    
 }
 
 <div class="text-center">
@@ -28,24 +32,22 @@
 
         </thead>
         <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td>1</td>
-                <td>Mesa</td>
-                <td>Ativo</td>
-                <td>21/06/2024</td>
-                <td>21/06/2024</td>
-                <td>111</td>
-                <td>Rodrigo</td>
-                <td>123</td>
-                <td>
-                    <div class="d-grid gap-2 d-md-block" role="group">
-                        <a role="button" class="btn btn-warning" asp-controller="Produto" asp-action="Editar">Editar</a>
-                        <a role="button" class="btn btn-danger" asp-controller="Produto" asp-action="ApagarConfirmacao">Apagar</a>
-                    </div>
-                </td>
-
-            </tr>
+            @foreach (var produto in Model)
+            {
+                <tr>
+                    <td>@produto.Id</td>
+                    <td>@produto.Codigo</td>
+                    <td>@produto.Descricao</td>
+                    <td>@produto.Status</td>
+                    <td>@produto.DataFabricacao</td>
+                    <td>@produto.DataValidade</td>
+                    <td>@produto.CodigoFornecedor</td>
+                    <td>@produto.DescricaoFornecedor</td>
+                    <td>@produto.CNPJFornecedor</td>
+                                     
+                
+                </tr>
+            }
             
         </tbody>
     </table>
