--- a/AutoGlassWeb/Views/Shared/_Layout.cshtml
+++ b/AutoGlassWeb/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Lista AutoGlass</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Produto" asp-action="Index">Lista AutoGlass</a>
                         </li>
                     </ul>
                 </div>
